# libvterm-cmake

./: .gitmodules  CMakeLists.txt  vterm.pc.in  vterm.pri
